Etapa 2/Compilador minijava - etapa 2/bin/tests/tests sintácticos/invalidos/test19.java
/* Test19
 * @ Objetivo: Detectar que falta el lado derecho de la asignacion.
 */
class clase
{
	static void metodo()
	{
		i = ;
	}
	
}

